2009-04-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c:
   Hide the extra file open dialog options in an expander to make the
   dialog more compact by default and to provide more space for the
   file view.
   Remove the filename field as it is also provided by GTK itself with
   more features like auto-completion.


2009-04-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c, src/callbacks.h, src/encodings.c, src/filetypes.c:
   Prevent double execution of radio menu item "activate" or "toggled"
   signal handlers.
   Move 'Set Encoding' callback function into encodings.c.


2009-04-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/project.c:
   Add some missing 'void's in function definitions.
   If the project base path is './', just use the path of the project
   config file instead of appending './'.
 * src/treeviews.c, src/project.c:
   When a project is loaded, replace the project base path with the
   project name in the Documents sidebar for parent items
   (closes #2723679).


2009-04-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keyfile.c, src/keyfile.h, src/project.c:
   Fix duplicating the recent files and projects lists when closing
   a project.
 * src/build.c, src/callbacks.c, src/dialogs.c, src/document.c,
   src/editor.c, src/encodings.c, src/filetypes.c,
   src/geanymenubuttonaction.c, src/geanyobject.c, src/geanywraplabel.c,
   src/highlighting.c, src/keybindings.c, src/keyfile.c, src/main.c,
   src/msgwindow.c, src/navqueue.c, src/notebook.c, src/plugins.c,
   src/prefs.c, src/queue.c, src/sciwrappers.c, src/socket.c,
   src/symbols.c, src/templates.c, src/toolbar.c, src/tools.c,
   src/treeviews.c, src/ui_utils.c, src/utils.c, src/vte.c:
   Remove all G_LIKELY macros inside g_return_if_fail() statements as
   this is redundant.
   Remove many other G_LIKELY/G_UNLIKELY macros which doesn't make much
   sense to keep the code more readable.

